<resources>
    <string name="app_name">Hub4Tickets</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign In</string>
    <string name="message_failed_request_general">Oops! Something went wrong.</string>
    <string name="message_loading">Loading…</string>
    <string name="message_no_internet">No Internet Connection. Make sure that Wi-Fi or mobile data is turned on , then        try again.    </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_current_password">Current Password</string>
    <string name="prompt_confirm_password">Re-type Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">Please enter valid email address</string>
    <string name="error_field_required_password">Please enter your password</string>
    <string name="error_field_required_re_password">Please Re-enter your password</string>
    <string name="error_password_too_short">This password is too short</string>
    <string name="error_invalid_password">Password must be minimum 8 characters in length, contains at least 1 special        character at least 1 numeric at least 1 uppercase alphabet and at least 1 lowercase alphabet    </string>
    <string name="error_not_match_password">Password does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_required_email">Please enter your email address</string>
    <string name="error_field_required_from_airport">Please enter your origin city</string>
    <string name="error_field_required_to_airport">Please enter your destination city</string>
    <string name="error_field_required_departure">Please enter your departure date</string>
    <string name="error_field_required_return">Please enter your return date</string>
    <string name="error_field_after_return">Please enter valid return date</string>
    <string name="error_field_same_location">From and To location can’t be same</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing default location."</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="yes_i_want_to_receive_promotions">Yes, I want to receive promotions from hub4tickets.</string>
    <string name="send_otp">Send OTP</string>
    <string name="dialog_title">Two-step-verification</string>
    <string name="cancel">Cancel</string>
    <string name="verify">Verify</string>
    <string name="two_step_verification">Two - Step Verification</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="help">Help</string>
    <string name="my_account">My Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="legal_information">Legal Information</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="communicate">Communicate</string>
    <string name="rate_app">Rate The Hub4Tickets App</string>
    <string name="support">Support</string>
    <string name="contact_app_support">Contact App Support Team</string>
    <string name="flight">Flights</string>
    <string name="trip_stop_details">Trip Stop Details</string>
    <string name="select_provider">Select Provider</string>
    <string name="hotels">Hotels</string>
    <string name="sports">Sports</string>
    <string name="events">Events</string>
    <string name="my_alerts">My Alerts</string>
    <string name="my_history">My History</string>
    <string name="clear_history">Clear History</string>
    <string name="language">Language :</string>
    <string name="country_region">Country / Region</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="action_alerts">Alerts</string>
    <string name="ok">ok</string>
    <string name="loading">Loading</string>
    <string name="alert_failure">Failure</string>
    <string name="alert_success">Success</string>
    <string name="currency">Currency</string>
    <string name="country">Country</string>
    <string name="apply">Apply</string>
    <string name="title_activity_flight">FlightActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="return_flight">Return</string>
    <string name="one_way">One-Way</string>
    <string name="flight_details">Trip Details</string>
    <string name="multicity">MultiCity</string>
    <string name="direct">Direct</string>
    <string name="n_scales">%d scales</string>
    <string name="via_agent">via %s</string>
    <string name="one_adult">1 Adult, 0 Children , 0 Infants</string>
    <string name="default_class">Economy</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="see_details">See Details</string>
    <string name="visit_site">Visit Site</string>
    <string name="change_password">Change Password</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="my_account_info">My Account Info</string>
    <string name="alert_log_out">Log Out</string>
    <string name="log_out_messege">Are you sure you want to logout?</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="personal_information">Personal Information</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="conn_account">Connected Account</string>
    <string name="passport">Passport</string>
    <string name="btn_done">Done</string>
    <string name="language_settings">Language</string>
    <string-array name="tab_A">        <item>$600</item>        <item>$2200</item>        <item>$800</item>        <item>$600</item>        <item>$900</item>        <item>$600</item>        <item>$700</item>        <item>$6700</item>        <item>$6400</item>    </string-array>
    <string-array name="tab_B">        <item>$600</item>        <item>$2200</item>        <item>$800</item>        <item>$600</item>        <item>$900</item>        <item>$600</item>        <item>$700</item>        <item>$6700</item>        <item>$6400</item>    </string-array>
    <string-array name="return_trip">        <item>$900</item>        <item>$600</item>        <item>$600</item>    </string-array>
    <string-array name="tab_C">        <item>Item 3A</item>        <item>Item 3B</item>        <item>Item 3C</item>        <item>Item 3D</item>        <item>Item 3E</item>        <item>Item 3F</item>        <item>Item 3G</item>        <item>Item 3H</item>        <item>Item 3I</item>        <item>Item 3J</item>        <item>Item 3K</item>        <item>Item 3L</item>        <item>Item 3M</item>        <item>Item 3N</item>        <item>Item 3O</item>        <item>Item 3P</item>        <item>Item 3Q</item>        <item>Item 3R</item>        <item>Item 3S</item>        <item>Item 3T</item>    </string-array>
    <string name="title_activity_personal_info">Personal Information</string>
    <string name="prompt_phone_no">Phone Number</string>
    <string name="action_update">Update</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_home_airport">Home Airport</string>
    <string name="prompt_time_zone">Time Zone</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">State / Province</string>
    <string name="error_country_select">Please select country first</string>
    <string name="error_state_select">Please select state first</string>
    <string name="price_text">Price</string>
    <string name="duration_text">Duration</string>
    <string name="outbound_takeoff_time">Outbound Takeoff Time</string>
    <string name="outbound_landing_time">Outbound Landing Time</string>
    <string name="inbound_takeoff_time">Inbound Takeoff Time</string>
    <string name="inbound_landing_time">Inbound Landing Time</string>
    <string name="price_code">price</string>
    <string name="duration_code">duration</string>
    <string name="outbound_takeoff_time_code">Outbound_Takeoff_Time</string>
    <string name="inbound_takeoff_time_code">Inbound_Takeoff_Time</string>
    <string name="morning_departure_text">Morning Departure</string>
    <string name="evening_departure_text">Evening Departure</string>
    <string name="outbound_landing_time_code">Outbound_Landing_Time</string>
    <string name="inbound_landing_time_code">Inbound_Landing_Time</string>
    <string name="evening_arrival_text">Evening Arrival</string>
    <string name="economy_text">Economy</string>
    <string name="economy_code">ECONOMY</string>
    <string name="pre_economy_text">Premium Economy</string>
    <string name="pre_economy_code">PREMIUM_ECONOMY</string>
    <string name="business_text">Business</string>
    <string name="business_code">BUSINESS</string>
    <string name="first_text">First Class</string>
    <string name="first_code">FIRST</string>
    <string name="no">No</string>
    <string name="flight_return">round</string>
    <string name="alert_exit"></string>
    <string name="alert_exit_msg">Are you sure you want to exit?</string>
    <string name="oneway">oneway</string>
    <string name="fetch_address">Fetch address</string>
    <string name="settings">Settings</string>
    <string name="address_found">Address found</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for location.    </string>
    <string name="cabin_class">Cabin Class</string>
    <string name="passenger_information">Passenger Information</string>
    <string name="under_12_years">Under 12 years</string>
    <string name="under_2_years">Under 2 years</string>
    <string name="yes">Yes</string>
    <string name="passenger">Passenger</string>
    <string name="flight_not_found9">Flight Not Found</string>
    <string name="from">From</string>
    <string name="error_field_required_current_password">Please enter your current password</string>
    <string name="error_field_required_new_password">Please enter your new password</string>
    <string name="time">Time</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="app_build_no">Build Number</string>
    <string name="app_version">Version Number</string>
    <string name="done">DONE</string>
    <string name="select_dates">Select Dates</string>
    <string name="calender_validations">Next Departure date cannot be less than the previous departure date</string>
    <string name="multicity_empty_fields_validations">Please check and retry with the valid set of combinations.    </string>
    <string name="multicity_empty_date_validations">Please enter the date.</string>
</resources>