<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/activity_vertical_margin"
              android:gravity="center_horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView
            android:text="@string/two_step_verification"
            style="@style/CustomLargeTextView"
            android:textStyle="bold"
            android:id="@+id/textView"/>
    <TextView
            android:text="@string/enter_your_code"
            style="@style/CustomRegularTextView"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/textView2"/>
    <EditText
            style="@style/CustomLargeTextView"
            android:inputType="number"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:hint="@string/enter_otp"
            android:ems="10"
            android:gravity="center"
            android:id="@+id/editTextEnterOtp"/>
    <TextView
            android:text="@string/resend_otp"
            style="@style/CustomLargeTextView"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/button"/>
   <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent" android:layout_height="match_parent">
    <Button
            android:text="@string/cancel"
            android:layout_width="0dp"
            style="@style/CustomButton"
            android:layout_marginRight="@dimen/activity_vertical_margin_half"
            android:layout_weight="1"
            android:id="@+id/button_cancel"/>
    <Button
            android:text="@string/verify"
            android:layout_width="0dp"
            style="@style/CustomButton"
            android:layout_weight="1"
            android:id="@+id/button_verify"/>
    </LinearLayout>
</LinearLayout>