<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent" android:layout_height="match_parent"
             android:background="@drawable/home_bg"
             tools:context="com.usit.hub4tickets.dashboard.ui.HelpFragment">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_margin="@dimen/activity_vertical_margin"
                  android:orientation="vertical"
                  android:weightSum="3">
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/corner_radius"
                app:cardMaxElevation="@dimen/max_elevation"
                app:cardElevation="0.7dp"
                app:contentPadding="@dimen/content_padding"
                app:contentPaddingBottom="0dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_margin="@dimen/activity_vertical_margin">
                <TextView
                        style="@style/CustomLargeBoldTextView"
                        android:text="@string/legal_information"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
                <TextView
                        style="@style/CustomRegularTextView"
                        android:text="@string/terms_amp_conditions"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
                <TextView
                        style="@style/CustomRegularTextView"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/privacy_policy"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/corner_radius"
                app:cardMaxElevation="@dimen/max_elevation"
                app:cardElevation="0.7dp"
                app:contentPadding="@dimen/content_padding"
                app:contentPaddingBottom="0dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_margin="@dimen/activity_vertical_margin">
                <TextView
                        style="@style/CustomLargeBoldTextView"
                        android:text="@string/communicate"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
                <TextView
                        style="@style/CustomRegularTextView"
                        android:text="@string/rate_app"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/corner_radius"
                app:cardMaxElevation="@dimen/max_elevation"
                app:cardElevation="0.7dp"
                app:contentPadding="@dimen/content_padding"
                app:contentPaddingBottom="0dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_margin="@dimen/activity_vertical_margin">
                <TextView
                        style="@style/CustomLargeBoldTextView"
                        android:text="@string/support"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
                <TextView
                        style="@style/CustomRegularTextView"
                        android:text="@string/contact_app_support"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>
