<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:padding="@dimen/activity_vertical_margin"
              android:gravity="center_horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView
            android:text="@string/change_password"
            style="@style/CustomLargeBoldDialogHeader"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:id="@+id/textView"/>

    <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/imv_logo"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
                app:hintTextAppearance="@style/TextAppearance.TextInputLayout.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/edt_current_password"
                    android:layout_width="match_parent"
                    style="@style/CustomRegularTextView"
                    android:hint="@string/prompt_current_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                app:hintTextAppearance="@style/TextAppearance.TextInputLayout.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_new_change_password"
                    android:layout_width="match_parent"
                    style="@style/CustomRegularTextView"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                app:hintTextAppearance="@style/TextAppearance.TextInputLayout.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:tooltipText="@string/action_sign_in_short"
        >

            <EditText
                    android:id="@+id/edt_confirm_password"
                    android:layout_width="match_parent"
                    style="@style/CustomRegularTextView"
                    android:hint="@string/prompt_confirm_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent" android:layout_height="match_parent">
        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                style="@style/CustomButton"
                android:layout_marginRight="@dimen/activity_vertical_margin_half"
                android:layout_weight="1"
                android:id="@+id/button_cancel1"/>
        <Button
                android:text="@string/change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomButton"
                android:layout_weight="1"
                android:id="@+id/button_chng_password"/>
    </LinearLayout>
</LinearLayout>